# wireguardian

./: .gitignore  Vagrantfile
crates/wireguardian-client/: Cargo.toml  build.rs
crates/wireguardian-client/src/: main.rs
crates/wireguardian-device/: Cargo.toml
crates/wireguardian-device/src/: cmd.rs  lib.rs  userspace.rs
crates/wireguardian-device/src/os/: linux.rs  osx.rs
crates/wireguardian-proto/: Cargo.toml  build.rs
crates/wireguardian-proto/src/: lib.rs
crates/wireguardian-server/: ;  Cargo.toml  build.rs
crates/wireguardian-server/migrations/: 20211005012717_create_users_tables.down.sql  20211005012717_create_users_tables.up.sql  20211005110310_create_sessions_table.up.sql  20211012202629_create_dhcp_table.down.sql  20211012202629_create_dhcp_table.up.sql
crates/wireguardian-server/src/: cli.rs  config.rs  device.rs  main.rs  otp.rs  tests.rs
crates/wireguardian-server/src/models/: dhcp.rs  session.rs  tests.rs  totp.rs  user.rs
crates/wireguardian-server/src/os/: linux.rs  osx.rs
crates/wireguardian-server/src/services/: dhcp.rs  login.rs  session.rs  wireguardian.rs
proto/: wireguardian.proto
