[package]
name = "wireguardian-client"
version = "0.1.0"
edition = "2018"


[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.5"
console = "0.15"
dialoguer = "0.8"
prost = "0.8"
rand = "0.7"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
wireguard-rs = { git = "https://github.com/kvnallsn/wireguard-rs.git", branch = "master" }
wireguardian-proto = { path = "../wireguardian-proto" }
x25519-dalek = "1.2"


[build-dependencies]
tonic-build = "0.5"
