[package]
name = "wireguardian-device"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
ipnetwork = "0.18"
thiserror = "1.0"
tracing = "0.1"
wireguard-rs = { git = "https://github.com/kvnallsn/wireguard-rs.git", branch = "master" }
x25519-dalek = "1.2"
